--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,79 +2,89 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-  }
-  
+}
+
 .content {
     display: flex;
     flex: 1;
-  }
-  
-  /** navbar ***/
+}
 
-  .header {
+
+/** navbar ***/
+
+.header {
     color: #000000;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
     background-color: #f8f9fa;
-    border-bottom: 2px solid #dee2e6;
-  
-  }
-  
-  .app-name {
-    font-size: 24px;
-    margin: 0;
-  }
+    border-bottom: 3px solid #dee2e6;
+    height: 60px;
+}
 
-  .left-pane, .right-pane {
+.logo {
+    margin-top: 20px;
+}
+
+.app-name {
+    font-size: 30px;
+    margin-top: 45px;
+    padding-left: 10px;
+}
+
+.h {
+    color: #6c757d;
+}
+
+.left-pane,
+.right-pane {
     width: 20%;
     padding: 10px;
     background-color: #f8f9fa;
-  }
-  .left-pane{
+}
+
+.left-pane {
     border-right: 1px solid #e2e5e8;
-  }
-  .right-pane{
+}
+
+.right-pane {
     border-left: 1px solid #e2e5e8;
-  }
-  .main-pane {
+}
+
+.main-pane {
     flex: 1;
     padding: 10px;
     background-color: #fff;
-  }
-  
- 
+}
 
-  .menu{
+.menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 60px;
-  }
-  .left-section {
+}
+
+.left-section {
     display: flex;
     align-items: center;
-  }
-  
-  .logo {
+}
+
+.logo {
     height: 40px;
     margin-right: 10px;
-  }
-  
-  
-  
-  .middle-section {
-   
-    margin: 0px 30px ;
-  }
-  
-  .right-section {
+}
+
+.middle-section {
+    margin: 0px 30px;
+}
+
+.right-section {
     display: flex;
     align-items: center;
-  }
-  
-  .close-button {
+}
+
+.close-button {
     background-color: #ff2d42;
     color: white;
     border: none;
@@ -82,279 +92,302 @@
     padding: 10px 20px;
     cursor: pointer;
     font-size: 16px;
-  }
-
-  /**other **/
+}
 
 
-   video {
+/**other **/
+
+video {
     width: 100%;
     height: auto;
     border-radius: 10px;
-  }
-  
-  ul {
+}
+
+ul {
     list-style-type: none;
-  } 
- h2{
-  color: #000000;
- }
-  
-  .sidebar {
+}
+
+h2 {
+    color: #000000;
+}
+
+.sidebar {
     width: auto;
     padding: 10px 20px;
-  }
-  
-  .activity-section,
-  .notes-section {
+}
+
+.activity-section,
+.notes-section {
     margin-bottom: 20px;
-  }
-  
-  .activity-section ,
-  .notes-section h2 {
+}
+
+.activity-section,
+.notes-section h2 {
     font-size: 18px;
     margin-bottom: 10px;
-  }
-  
-  .session-info h3 {
+}
+
+.session-info h3 {
     cursor: pointer;
     display: flex;
     align-items: center;
     justify-content: space-between;
-  }
-  
-  .session-details, .notes-details , .log-details{
+}
+
+.session-details,
+.notes-details,
+.log-details {
     margin-left: 20px;
     background-color: #f0f0f0;
     border-radius: 10px;
-    margin: auto;
     padding: 10px;
-  }
+    margin: 10px;
+    font-size: 14px;
+}
 
-  
-  .collapsible-header {
+.notes-container {
+    max-height: 500px;
+    /* Set the max height of the scrollable area */
+    overflow-y: auto;
+    /* Enable vertical scrolling */
+    padding-right: 10px;
+    /* Ensure padding for scrollbar */
+}
+
+.collapsible-header {
     display: flex;
     cursor: pointer;
-  }
+}
 
-  .collapsible-header span {
+.collapsible-header span {
     display: flex;
     align-items: center;
-    margin-right: 16px; 
-  }
- 
-  .main-content {
+    margin-right: 16px;
+}
+
+.main-content {
     flex: 1;
     padding: 20px;
-  }
-  
-  .video-player {
+}
+
+.video-player {
     margin-bottom: 20px;
-  }
-  
-  .graphs {
+}
+
+.graphs {
     display: flex;
     justify-content: space-between;
-  }
-  
+}
 
-  /** logs section **/
 
-  .logs {
+/** logs section **/
+
+.logs {
     width: auto;
     padding: 20px;
-    
-  }
-  .search-icon {
+}
+
+.search-icon {
     margin-right: 8px;
-  }
-  
-  .clear-icon {
+}
+
+.clear-icon {
     cursor: pointer;
     margin-left: 8px;
-  }
-  
-  
-  .logs h2 {
-    margin-bottom: 10px;
-  }
-  
+}
 
-  .collapsible-header {
+.logs h2 {
+    margin-bottom: 10px;
+}
+
+.collapsible-header {
     display: flex;
     align-items: center;
     cursor: pointer;
-  }
-  .log-event {
-    margin-bottom: 10px;
-  }
+}
 
-  .search-container {
+.log-event {
+    margin-bottom: 10px;
+}
+
+.search-container {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
-  }
-  
-  .search-container .search-icon {
+}
+
+.search-container .search-icon {
     margin: 5px;
-  }
-  
-  .search-container .clear-icon {
+}
+
+.search-container .clear-icon {
     margin-left: 5px;
     cursor: pointer;
-  }
-  
-  .search-container input {
+}
+
+.search-container input {
     flex: 1;
     padding: 5px;
-    border: 1px solid #f8f9fa;
-    border-radius: 10px;
-  }
-  
-  .log-event h4 {
+    border: 1px solid #f2f6f9;
+    border-radius: 7px;
+}
+
+.log-event h4 {
     cursor: pointer;
     display: flex;
     font-size: 18px;
     align-items: center;
-   font-weight: normal;
-  }
-  
-  .log-details p {
+    font-weight: normal;
+}
+
+.log-details p {
     margin: 10px;
     font-size: 14px;
-  }
+}
 
-  .logs-container {
-    max-height: 300px; /* Set the max height of the scrollable area */
-    overflow-y: auto; /* Enable vertical scrolling */
-    padding-right: 10px; /* Ensure padding for scrollbar */
-  }
+.logs-container {
+    max-height: 650px;
+    /* Set the max height of the scrollable area */
+    overflow-y: auto;
+    /* Enable vertical scrolling */
+    padding-right: 10px;
+    /* Ensure padding for scrollbar */
+}
+
 
 /**** Main Section - Video ****/
 
 .video-player-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .video-element {
-  width: 100%;
-  max-width: 800px;
-  margin-bottom: 10px;
+    width: 100%;
+    max-width: 800px;
+    margin-bottom: 10px;
 }
 
 .video-btns {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 100%;
-  max-width: 800px;
-  padding: 10px 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 800px;
+    padding: 10px 20px;
 }
 
 .video-controls {
-  display: flex;
-  align-items: center;
-  margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 .video-controls button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  margin: 0 5px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    margin: 0 5px;
 }
 
 .video-controls .video-time {
-  margin-left: 10px;
+    margin-left: 10px;
 }
 
 .toggle-buttons {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .toggle-button {
-  position: relative;
-  background-color: #ddd;
-  border: none;
-  border-radius: 99px;
-  width: 50px; 
-  height: 28px;
-  cursor: pointer;
-  font-size: 16px;
-  transition: background-color 0.3s ease;
+    position: relative;
+    background-color: #ddd;
+    border: none;
+    border-radius: 99px;
+    width: 50px;
+    height: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
 }
 
 .toggle-button .thumb {
-  height: 20px;
-  width: 20px;
-  background-color: #fff;
-  border-radius: 99px;
-  transform: translateX(0);
-  transition: left 0.15s ease;
-  position: absolute;
-  transform: translateY(-50%);
+    height: 15px;
+    width: 15px;
+    background-color: #fff;
+    border-radius: 99px;
+    transform: translateX(0);
+    transition: left 0.15s ease;
+    position: absolute;
+    transform: translateY(-50%);
 }
 
 .toggle-button.active .thumb {
-  left: calc(50px - 20px);
+    left: calc(50px - 20px);
 }
 
 .toggle-button.active {
-  background-color: #28a745;
+    background-color: #28a745;
 }
 
 .toggle-button.inactive {
-  background-color: #6c757d;
+    background-color: #6c757d;
 }
 
-.left-tgl, .right-tgl {
-  display: flex;
-  align-items: center;
-  gap: 10px; /* Adjust gap as needed */
+.left-tgl,
+.right-tgl {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    /* Adjust gap as needed */
 }
 
 .timeline {
-  position: relative;
-  width: 100%;
-  max-width: 800px;
-  border-bottom: 7px solid #ccc;
- 
-  margin-bottom: 10px;
-  height: 20px; 
+    position: relative;
+    width: 100%;
+    max-width: 800px;
+    border-bottom: 7px solid #ccc;
+    margin-bottom: 10px;
+    height: 20px;
 }
 
 .timeline-logs {
-  display: flex;
-  justify-content: space-between;
-  padding: 5px;
+    display: flex;
+    justify-content: space-between;
+    padding: 5px;
 }
 
 .thumbnail-preview {
-  position: absolute;
-  bottom: 30px; /* Adjust to position the thumbnail above the timeline */
-  transform: translateX(-50%);
-  padding: 5px;
-  background: rgba(0, 0, 0, 0.75);
-  color: rgb(248, 54, 54);
-  font-size: 12px;
-  border-radius: 3px;
-  pointer-events: none;
+    position: absolute;
+    bottom: 30px;
+    /* Adjust to position the thumbnail above the timeline */
+    transform: translateX(-50%);
+    padding: 5px;
+    background: rgba(0, 0, 0, 0.75);
+    color: rgb(248, 54, 54);
+    font-size: 12px;
+    border-radius: 3px;
+    pointer-events: none;
 }
+
 
 /** graph **/
 
 .graphs {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  max-width: 800px;
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    max-width: 1140px;
+    border-top: 2px solid #ccc;
+    margin-top: 10px;
+    padding-top: 2px;
 }
 
 .graph {
-  width: 30%;
-  border: 1px solid #ccc;
-  padding: 10px;
+    /* height: 270px;
+    width: 33%;
+    border: 1px solid #ccc;
+    margin: 2px; */
+    color: #ff2d42;
 }
