--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,5 @@
+/* main.css */
+
 .app {
     display: flex;
     flex-direction: column;
@@ -96,6 +98,11 @@
 
 
 /**other **/
+
+.video-player-container {
+    width: 100%;
+    height: 100%;
+}
 
 video {
     width: 100%;
@@ -390,4 +397,95 @@ h2 {
     border: 1px solid #ccc;
     margin: 2px; */
     color: #ff2d42;
+}
+
+
+/* .. */
+
+
+/* src/index.css */
+
+.sidebar {
+    width: 300px;
+    /* background-color: #f9f9f9; */
+    /* border-radius: 5px; */
+    margin: 20px;
+    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+}
+
+.collapsible-header {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.collapsible-header span {
+    margin-right: 10px;
+}
+
+.session-details,
+.notes-details {
+    margin-top: 10px;
+    padding-left: 20px;
+}
+
+.note-writing {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+.note-writing textarea {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    resize: none;
+    margin-bottom: 10px;
+}
+
+.note-actions {
+    display: flex;
+    justify-content: space-between;
+}
+
+.note-actions button {
+    padding: 8px 12px;
+    font-size: 13px;
+    border: none;
+    border-radius: 7px;
+    cursor: pointer;
+}
+
+.note-actions button:first-child {
+    background-color: #28a745;
+    color: white;
+}
+
+.note-actions button:first-child:hover {
+    background-color: #335e3c;
+}
+
+.note-actions button:last-child {
+    background-color: #dc3545;
+    color: white;
+}
+
+.note-actions button:last-child:hover {
+    background-color: #7f4046;
+}
+
+.note-list .note-item {
+    padding: 10px;
+    border-bottom: 1px solid #eee;
+}
+
+.note-list .note-item h3 {
+    margin: 0 0 5px;
+    font-size: 13px;
+    color: #333;
+    border: 2px solid black;
+}
+
+.note-list .note-item p {
+    margin: 0;
 }
